# trades-website-app

./: .env.example  .gitattributes  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  Estrategia de SEO Local para Trades APP.txt  Trades_Website_App_Build_Guide_Cursor_Windows.md  eslint.config.js  package.json  pnpm-lock.yaml  trades_website_app_100_x_build_guide_next.md  tsconfig.json  turbo.json
apps/cms/: .env.dev  README.md  db.sqlite3  docker-compose.yml  main.py  pyproject.toml
apps/cms/core/: settings.py  urls.py
apps/cms/sitecontent/: api.py  models.py  serializers.py
apps/cms/sitecontent/management/commands/: seed_demo.py
apps/cms/sitecontent/migrations/: 0001_initial.py  0002_alter_theme_options_theme_created_at_and_more.py  0002_delete_theme_snippet.py  0003_merge_theme_removal.py
apps/cms/website/: admin.py  api.py  apps.py  models.py  models_local.py  models_pages.py  models_settings.py  serializers.py  urls.py  views.py
apps/cms/website/migrations/: 0001_initial.py  0002_portfolioindexpage_servicesindexpage_projectpage_and_more.py  0003_copy_theme_to_sitesettings.py  0004_geoarea_projectpage_geoareas_servicecoverage.py  0005_testimonial_geoarea.py  0006_localseosettings.py  0007_add_indexes_servicecoverage_testimonial.py  0007_servicecoverage_website_ser_service_ac0760_idx_and_more.py  0008_merge_20250901_2124.py  0009_remove_servicecoverage_svc_geo_idx_and_more.py  0010_geoarea_neighbors_and_more.py  0011_servicepage_cta_hint.py  0012_servicearea_geo.py
apps/cms/website/tests/: test_serializers.py
scripts/: typecheck.mjs
(+69 files in other folders)
